fix paging overflow

--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -74,7 +74,7 @@ body {
 
 @media (max-width: 768px) {
     .table th, .table td {
-        padding: 13px;
+        padding: 11px;
         font-size: 13px;
     }
 }
